@@ -779,6 +779,156 @@ name|close
 argument_list|()
 expr_stmt|;
 block|}
+comment|// LUCENE-2580
+DECL|method|testTall
+specifier|public
+name|void
+name|testTall
+parameter_list|()
+throws|throws
+name|IOException
+block|{
+name|MockRAMDirectory
+name|indexStore
+init|=
+operator|new
+name|MockRAMDirectory
+argument_list|()
+decl_stmt|;
+name|RandomIndexWriter
+name|writer
+init|=
+operator|new
+name|RandomIndexWriter
+argument_list|(
+name|newRandom
+argument_list|()
+argument_list|,
+name|indexStore
+argument_list|)
+decl_stmt|;
+name|add
+argument_list|(
+literal|"blueberry chocolate pie"
+argument_list|,
+name|writer
+argument_list|)
+expr_stmt|;
+name|add
+argument_list|(
+literal|"blueberry chocolate tart"
+argument_list|,
+name|writer
+argument_list|)
+expr_stmt|;
+name|IndexReader
+name|r
+init|=
+name|writer
+operator|.
+name|getReader
+argument_list|()
+decl_stmt|;
+name|writer
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|IndexSearcher
+name|searcher
+init|=
+operator|new
+name|IndexSearcher
+argument_list|(
+name|r
+argument_list|)
+decl_stmt|;
+name|MultiPhraseQuery
+name|q
+init|=
+operator|new
+name|MultiPhraseQuery
+argument_list|()
+decl_stmt|;
+name|q
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"body"
+argument_list|,
+literal|"blueberry"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|q
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Term
+argument_list|(
+literal|"body"
+argument_list|,
+literal|"chocolate"
+argument_list|)
+argument_list|)
+expr_stmt|;
+name|q
+operator|.
+name|add
+argument_list|(
+operator|new
+name|Term
+index|[]
+block|{
+operator|new
+name|Term
+argument_list|(
+literal|"body"
+argument_list|,
+literal|"pie"
+argument_list|)
+block|,
+operator|new
+name|Term
+argument_list|(
+literal|"body"
+argument_list|,
+literal|"tart"
+argument_list|)
+block|}
+argument_list|)
+expr_stmt|;
+name|assertEquals
+argument_list|(
+literal|2
+argument_list|,
+name|searcher
+operator|.
+name|search
+argument_list|(
+name|q
+argument_list|,
+literal|1
+argument_list|)
+operator|.
+name|totalHits
+argument_list|)
+expr_stmt|;
+name|r
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+name|indexStore
+operator|.
+name|close
+argument_list|()
+expr_stmt|;
+block|}
 DECL|method|add
 specifier|private
 name|void
